@@ -8,7 +8,10 @@ repositories {
 }
 
 compileJava {
-    options.compilerArgs << '--enable-preview'
+    options.compilerArgs.addAll(
+            ['--enable-preview',
+             '--add-modules', 'jdk.incubator.concurrent'
+            ])
 }
 
 dependencies {
